# citeproc-endnote-uv

./: .gitignore  LICENSE  README.md  pyproject.toml
codex-skills/draft-scientific-paper/: SKILL.md
codex-skills/draft-scientific-paper/agents/: openai.yaml
codex-skills/draft-scientific-paper/references/: bushman-paper-writing.md
codex-skills/edit-scientific-prose/: SKILL.md
codex-skills/edit-scientific-prose/agents/: openai.yaml
codex-skills/edit-scientific-prose/references/: bushman-editing-principles.md
codex-skills/review-scientific-figures/: SKILL.md
codex-skills/review-scientific-figures/agents/: openai.yaml
codex-skills/review-scientific-figures/references/: bushman-figure-principles.md
codex-skills/write-scientific-grant/: SKILL.md
codex-skills/write-scientific-grant/agents/: openai.yaml
codex-skills/write-scientific-grant/references/: bushman-grant-writing.md
docs/: agentic_revision_workflow.md  latex_to_endnote_workflow.md
scripts/: install.sh
src/asta_revision_workflow/: pandoc_revision_launcher.py
src/citeproc_endnote_uv/: __init__.py  cli.py  docx_numeric_to_endnote_temp.py  docx_reference_list_to_ris.py  docx_word_sanity.py  pandoc_revision_launcher.py  word_doc_only_revision_launcher.py
tests/: test_docx_reference_list_to_ris.py  test_filter.py  test_pandoc_revision_launcher.py
