[project]
name = "citeproc-endnote-uv"
version = "0.1.0"
description = "Scientific writing workflow tools for EndNote temporary citations, Word revision passes, and Codex skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jacob Greene" }
]
dependencies = []

[project.scripts]
citeproc-endnote = "citeproc_endnote_uv.cli:main"
bib-to-ris = "citeproc_endnote_uv.ris:main"
docx-reference-list-to-ris = "citeproc_endnote_uv.docx_reference_list_to_ris:main"
docx-numeric-to-endnote-temp = "citeproc_endnote_uv.docx_numeric_to_endnote_temp:main"
docx-word-sanity = "citeproc_endnote_uv.docx_word_sanity:main"
docx-extract-comments = "citeproc_endnote_uv.docx_extract_comments:main"
docx-modified-citation-support = "citeproc_endnote_uv.docx_modified_citation_support:main"
docx-plain-numeric-citation-check = "citeproc_endnote_uv.docx_plain_numeric_citation_check:main"
docx-endnote-ris-sync = "citeproc_endnote_uv.docx_endnote_ris_sync:main"
word-doc-only-revision = "citeproc_endnote_uv.word_doc_only_revision_launcher:main"
pandoc-word-revision = "citeproc_endnote_uv.pandoc_revision_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
