[project]
name = "asta-revision-workflow"
version = "0.1.0"
description = "Claude-driven Word revision workflow: comment-scoped manuscript revision passes, bipartite-backed evidence resolution, and EndNote temporary-citation output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jacob Greene" }
]
# pandoc ships with the repo via the pypandoc-binary wheel (bundled pandoc binary).
# bip (bipartite) is a Go binary and claude (Claude Code) is an npm CLI; both are
# installed by scripts/install.sh, not pip. See README.
dependencies = [
  "pypandoc-binary>=1.13",
]

[project.scripts]
docx-reference-list-to-ris = "asta_revision_workflow.docx_reference_list_to_ris:main"
docx-endnote-to-ris = "asta_revision_workflow.docx_endnote_to_ris:main"
docx-numeric-to-endnote-temp = "asta_revision_workflow.docx_numeric_to_endnote_temp:main"
docx-word-sanity = "asta_revision_workflow.docx_word_sanity:main"
docx-extract-comments = "asta_revision_workflow.docx_extract_comments:main"
docx-modified-citation-support = "asta_revision_workflow.docx_modified_citation_support:main"
docx-plain-numeric-citation-check = "asta_revision_workflow.docx_plain_numeric_citation_check:main"
docx-endnote-ris-sync = "asta_revision_workflow.docx_endnote_ris_sync:main"
asta-revision = "asta_revision_workflow.pandoc_revision_launcher:main"
asta-revision-agent = "asta_revision_workflow.pandoc_revision_agent_runner:main"
asta-evidence-resolver = "asta_revision_workflow.asta_evidence_resolver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
